Update forge, fix issues with Spring deps, fix email